[gd_scene load_steps=9 format=3 uid="uid://covg4hc6ca2q5"]

[ext_resource type="Script" uid="uid://ug1yd8mumeg3" path="res://script/ending.gd" id="1_qvw0f"]
[ext_resource type="Texture2D" uid="uid://doea8ibvrgmuq" path="res://assets/ending/容器 12@1x.png" id="2_ktvw0"]
[ext_resource type="Texture2D" uid="uid://cihfcfplisjvp" path="res://assets/ending/容器 18@1x.png" id="3_1shw0"]
[ext_resource type="Texture2D" uid="uid://dfdloejproubq" path="res://assets/ending/容器 19@1x.png" id="4_hd4c1"]
[ext_resource type="Texture2D" uid="uid://ruffdpul8p7h" path="res://assets/ending/容器 20@1x.png" id="5_mswrs"]
[ext_resource type="Texture2D" uid="uid://b26eo6iyfo5j1" path="res://assets/ending/容器 21@1x.png" id="6_stq2p"]
[ext_resource type="Texture2D" uid="uid://d00uso4phyhp3" path="res://assets/ending/容器 22@1x.png" id="7_7p3d0"]
[ext_resource type="PackedScene" uid="uid://b3x44g6r4hrth" path="res://scene/hud.tscn" id="8_ktvw0"]

[node name="Ending" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qvw0f")

[node name="Ending6" type="Sprite2D" parent="."]
visible = false
position = Vector2(640, 360)
texture = ExtResource("2_ktvw0")

[node name="Ending5" type="Sprite2D" parent="."]
visible = false
position = Vector2(640, 360)
texture = ExtResource("3_1shw0")

[node name="Ending1" type="Sprite2D" parent="."]
visible = false
position = Vector2(640, 360)
texture = ExtResource("4_hd4c1")

[node name="Ending3" type="Sprite2D" parent="."]
visible = false
position = Vector2(640, 360)
texture = ExtResource("5_mswrs")

[node name="Ending2" type="Sprite2D" parent="."]
visible = false
position = Vector2(640, 360)
texture = ExtResource("6_stq2p")

[node name="Ending4" type="Sprite2D" parent="."]
visible = false
position = Vector2(640, 360)
texture = ExtResource("7_7p3d0")

[node name="Hud" parent="." instance=ExtResource("8_ktvw0")]
